# education-roadmap

./: .gitmodules
angel/: .dockerignore  .env  .eslintrc.js  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  package-lock.json  package.json  tsconfig.json
angel/src/: app.controller.ts  app.module.ts  main.ts
backend/: .gitignore
datetime/: .gitignore  CMakeLists.txt
datetime/docker/gatling/: compose.yaml  run.sh
datetime/docker/gatling/source/: Dockerfile
datetime/docker/otgen/: compose.yaml  run.sh
datetime/docker/otgen/run/: test.sh
datetime/docker/otgen/source/: Dockerfile
datetime/docker/seagull/: compose.yaml
datetime/docker/seagull/rfc868-env/config/: conf.client.xml  time.protocol copy.xml  time.protocol.xml
datetime/docker/seagull/rfc868-env/run/: start_client_time.sh
datetime/docker/seagull/rfc868-env/scenario/: time.client.xml
datetime/docker/snappi/: .env  compose.yaml  run.sh
datetime/docker/snappi/config/: test.py  test_tcp.py
datetime/docker/snappi/source/: Dockerfile
datetime/src/: CMakeLists.txt  MessageQueue.cpp  MessageQueue.h  Server.cpp  ServerUdp.cpp  SocketUDP.cpp  SocketUDP.h  TcpSocket.cpp  TcpSocket.h
datetime/test/: CMakeLists.txt  Client.cpp  send-tcp.py  send.py  tcpgen.py
helloworld/: Dockerfile.dev  compose.yaml  index.js
helloworld-nest.angel/: compose.yaml
helloworld-nest.draft/: Dockerfile  compose.yaml  package.json
helloworld-test-esm/: Dockerfile
helloworld-ts/: .eslintrc.js  Dockerfile  compose.yaml  package.json  tsconfig.json
nest-practice/: .gitignore  compose.yaml  package.json
(+80 files in other folders)
